--- a/app.css
+++ b/app.css
@@ -7,5 +7,7 @@ li {
 }
 
 .default-avatar {
-    background-image: app-asset-url("avatar.png") no-repeat;
+    height: 50px;
+    width: 50px;
+    background-image: app-asset-url("avatar.png");
 }
