--- a/app.css
+++ b/app.css
@@ -18,10 +18,13 @@ li {
 
 .ticket_status_label {
     font-size: 10px;
+    display:inline-block;
+    padding: 0 2px;
+    line-height:16px;
 }
 
 .ticket_details {
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .details_and_notes_container {
