Change css classes to match Zendesk locales

--- a/app.css
+++ b/app.css
@@ -107,7 +107,7 @@ li {
 .flag-cz {background-position: -64px -33px}
 .flag-de {background-position: -80px -33px}
 .flag-dj {background-position: -96px -33px}
-.flag-dk {background-position: -112px -33px}
+.flag-da {background-position: -112px -33px}
 .flag-dm {background-position: -128px -33px}
 .flag-do {background-position: -144px -33px}
 .flag-dz {background-position: -160px -33px}
@@ -165,7 +165,7 @@ li {
 .flag-je {background-position: -224px -66px}
 .flag-jm {background-position: -240px -66px}
 .flag-jo {background-position: 0 -77px}
-.flag-jp {background-position: -16px -77px}
+.flag-ja {background-position: -16px -77px}
 .flag-ke {background-position: -32px -77px}
 .flag-kg {background-position: -48px -77px}
 .flag-kh {background-position: -64px -77px}
@@ -173,7 +173,7 @@ li {
 .flag-km {background-position: -96px -77px}
 .flag-kn {background-position: -112px -77px}
 .flag-kp {background-position: -128px -77px}
-.flag-kr {background-position: -144px -77px}
+.flag-ko {background-position: -144px -77px}
 .flag-kurdistan {background-position: -160px -77px}
 .flag-kw {background-position: -176px -77px}
 .flag-ky {background-position: -192px -77px}
