--- a/app.css
+++ b/app.css
@@ -1,3 +1,22 @@
+.admin {
+  p {
+    color: #999;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  label {
+    display: inline;
+  }
+
+  .back {
+    display: block;
+    float: right;
+    opacity: 0.5;
+    margin-top: 3px;
+  }
+}
+
 .whole {
   background: #fff;
   border: 1px solid rgb(213, 213, 213);
@@ -10,6 +29,26 @@
   .additional {
     padding-left: auto;
     padding-right: auto;
+
+    .field {
+      margin-left: 15px;
+      margin-right: 15px;
+      margin-top: 15px;
+      border-top: 1px solid #f0f0f0;
+      padding-top: 15px;
+
+      h4 {
+        font-size: 11px;
+        color:  #999;
+        font-weight: normal;
+      }
+
+      p {
+        font-size: 12px;
+        color:  #444;
+        line-height: 1.5;
+      }
+    }
   }
 
   .card {
@@ -17,10 +56,23 @@
     padding-bottom: 0px;
     font-family: "Lucida Grande", serif;
 
+    .cog {
+      float: right;
+      opacity: 0.5;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
     .avatar {
       width: 45px;
       height: 45px;
       float: left;
+
+      img {
+        border-radius: 4px;
+      }
     }
 
     .contacts {
@@ -53,6 +105,7 @@
         line-height: 1.286;
 
         .ticket_status_label {
+          font-size: 11px;
           padding: 0;
           padding-left: 4px;
           padding-right: 4px;
