--- a/app.css
+++ b/app.css
@@ -1,4 +1,41 @@
+div[data-main] {
+  position: relative;
+  overflow-x: hidden;
+
+  &.effect.open {
+    .whole {
+      -webkit-transform: translate3d(320px, 0, 0);
+      transform: translate3d(320px, 0, 0);
+      -webkit-transition: all 0.5s;
+      transition: all 0.5s;
+    }
+
+    .admin {
+      visibility: visible;
+      left: 0px;
+    }
+  }
+
+  &.effect .admin {
+    z-index: 1;
+    visibility: visible;
+    left: -250px;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+}
+
 .admin {
+  position: absolute;
+  top: 0;
+  left: -320px;
+  z-index: 100;
+  width: 320px;
+  backgroud: #ccc;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  height: 100%;
+
   p {
     color: #999;
     margin-top: 1em;
@@ -27,6 +64,8 @@
 }
 
 .whole {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   background: #fff;
   border: 1px solid rgb(213, 213, 213);
   border-radius: 4px;
