--- a/app.css
+++ b/app.css
@@ -118,6 +118,9 @@ div[data-main] {
     .cog {
       float: right;
       opacity: 0.5;
+      position: relative;
+      top: -16px;
+      left: 16px;
 
       &:hover {
         opacity: 1;
