--- a/app.css
+++ b/app.css
@@ -1,3 +1,9 @@
+&.box.apps_ticket_sidebar.app_view {
+  padding-bottom: 0px;
+  padding-top: 15px;
+  color: #333;
+}
+
 div[data-main] {
   position: relative;
   overflow-x: hidden;
@@ -77,22 +83,25 @@ div[data-main] {
     padding-right: auto;
 
     .field {
-      margin-left: 15px;
-      margin-right: 15px;
-      margin-top: 10px;
+      margin-top: 15px;
       border-top: 1px solid #f0f0f0;
       padding-top: 10px;
 
       textarea {
+        box-shadow: white 0px 0px 0px 0px inset;
+        padding: 0px;
         width: 100%;
-        height: 50px;
+        height: 72px;
         box-sizing: border-box;
         border: 0px;
       }
 
       &.builtin.tags {
+        ul {
+          margin-left: -3px;
+        }
+
         h4, p {
-          float: left;
           margin-top: 2px;
         }
 
@@ -131,26 +140,28 @@ div[data-main] {
 
       p {
         font-size: 12px;
-        color:  #444;
+        color:  #333;
         line-height: 1.5;
       }
     }
   }
 
   .card {
-    padding: 15px;
-    padding-bottom: 0px;
+    padding: 0px;
     font-family: "Lucida Grande", serif;
 
     .cog {
       float: right;
-      opacity: 0.5;
       position: relative;
-      top: -16px;
-      left: 16px;
+      top: 0px;
+      left: 0px;
+      width: 12px;
+      height: 12px;
+      display: inline-block;
+      background-image: app-asset-url("ico-settings-normal.png");
 
       &:hover {
-        opacity: 1;
+        background-image: app-asset-url("ico-settings-hover.png");
       }
     }
 
@@ -186,12 +197,14 @@ div[data-main] {
     }
 
     .avatar {
-      width: 45px;
-      height: 45px;
+      width: 40px;
+      height: 40px;
       float: left;
 
       &.default {
         background-image: app-asset-url("avatar.png");
+        background-size: cover;
+        border-radius: 4px;
       }
 
       img {
@@ -236,13 +249,13 @@ div[data-main] {
 
     .counts {
       margin: 0px;
-      margin-top: 15px;
+      margin-top: 9px;
 
       li {
         display: inline-block;
         font-size: 11px;
         color: #999;
-        width: 44px;
+        width: 50px;
         line-height: 1.286;
 
         a {
@@ -263,11 +276,33 @@ div[data-main] {
 
   .expandBar {
     background-color: #fff;
-    border-top: 1px solid rgb(213, 213, 213);
-    padding-top: 4px;
-    padding-bottom: 4px;
+    border-top: 1px solid #f0f0f0;
+    padding-top: 12px;
+    padding-bottom: 15px;
     display: block;
     margin-top: 20px;
+
+    .arrow {
+      height: 6px;
+      min-width: 11px;
+      display: block;
+      background-repeat: no-repeat;
+      background-position: center;
+
+      &.arrow-down {
+        background-image: app-asset-url("ico-arrow-down-normal.png");
+        &:hover {
+          background-image: app-asset-url("ico-arrow-down-hover.png");
+        }
+      }
+
+      &.arrow-up {
+        background-image: app-asset-url("ico-arrow-up-normal.png");
+        &:hover {
+          background-image: app-asset-url("ico-arrow-up-hover.png");
+        }
+      }
+    }
 
     &:hover {
       background: radial-gradient(40px circle at center top,#F5F5F5,#fff);
