Make class names more consistent
Ticket status still use underscore since some styling comes from New
Zendesk

--- a/app.css
+++ b/app.css
@@ -258,7 +258,7 @@
     }
   }
 
-  .expandBar {
+  .expand-bar {
     background-color: #fff;
     border-top: 1px solid #f0f0f0;
     padding-top: 0px;
