--- a/app.css
+++ b/app.css
@@ -196,6 +196,7 @@
         color: #999;
         font-size: 11px;
         margin-bottom: 3px;
+        overflow: auto;
 
         &.name {
           font-size: 14px;
