--- a/app.css
+++ b/app.css
@@ -69,7 +69,7 @@
 
       &.builtin.tags {
         ul {
-          margin-left: -3px;
+          margin-left: 0;
         }
 
         h4, p {
@@ -84,8 +84,7 @@
 
         li {
           float: left;
-          margin-left: 3px;
-          margin-right: 3px;
+          margin: 0 3px 3px 0;
           padding: 3px 6px 4px 6px;
           font-size: 11px;
           line-height: 13px;
