--- a/src/main.scss
+++ b/src/main.scss
@@ -25,7 +25,7 @@ html, body {
 .admin {
   margin-bottom: 15px;
 
-  .c-chk {
+  .c_chk {
     margin-bottom: 4px;
   }
 
@@ -34,11 +34,11 @@ html, body {
     margin-bottom: 1em;
   }
 
-  .org-fields {
+  .org_fields {
     margin-top: 20px;
   }
 
-  .org-fields-list {
+  .org_fields_list {
     margin-left: 20px;
   }
 
