new loader icon

--- a/src/main.scss
+++ b/src/main.scss
@@ -8,8 +8,9 @@ html, body {
 }
 
 .loader {
-  padding-left: 144px;
-  padding-top: 60px;
+  width: 50px;
+  display: block;
+  margin: 45px auto;
 }
 
 .box.apps_ticket_sidebar.app_view {
