--- a/src/main.scss
+++ b/src/main.scss
@@ -55,6 +55,11 @@ html, body {
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
+
+    img  {
+      width: 44px;
+      margin: 0 35px;
+    }
   }
 }
 
