no img as guiiluame requested

--- a/src/main.scss
+++ b/src/main.scss
@@ -58,7 +58,7 @@ html, body {
     padding: 0;
     text-align: center;
 
-    img.spinner {
+    .spinner {
       display: none;
       width: 35px;
       margin-top: 4px;
