--- a/src/main.scss
+++ b/src/main.scss
@@ -35,7 +35,7 @@ html, body {
     margin-bottom: 1em;
   }
 
-  .org_fields {
+  div.hide_empty_fields, .org_fields {
     margin-top: 20px;
   }
 
