--- a/src/templates/ticket_sidebar.html
+++ b/src/templates/ticket_sidebar.html
@@ -11,6 +11,6 @@
     </section>
 
     <script type="text/javascript" src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"></script>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="ticket_sidebar.js"></script>
 </body>
 </html>
