[OFFAPPS-1041] Display blocks of icon in-line

--- a/src/main.scss
+++ b/src/main.scss
@@ -189,7 +189,7 @@ i.icon_circle_arrow_left {
       left: 12px;
 
       a {
-        display: block;
+        display: inline-block;
         background-image: url("images/ico-social-sprite.png");
 
         &.facebook {
