Fix text field bug with margin left and width

--- a/src/main.scss
+++ b/src/main.scss
@@ -124,6 +124,8 @@ i.icon_circle_arrow_left {
 
       textarea {
         height: 72px;
+        width: 98.5%;
+        margin-left: 2px;
       }
 
       &.builtin.tags {
