--- a/src/main.scss
+++ b/src/main.scss
@@ -268,12 +268,13 @@ i.icon_circle_arrow_left {
     .counts {
       margin: 0px;
       margin-top: 30px;
+      display: flex;
+      justify-content: space-between;
 
       li {
         display: inline-block;
         font-size: 12px;
         color: #68737D;
-        width: 48px;
         line-height: 1.486;
 
         a {
