--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,7 @@
 
 html, body {
   overflow: hidden;
+  padding: 0 2.75px;
 }
 
 .loader {
@@ -124,8 +125,6 @@ i.icon_circle_arrow_left {
 
       textarea {
         height: 72px;
-        width: 98.5%;
-        margin-left: 2px;
       }
 
       &.builtin.tags {
