Use Spinner Gif for Page Load

--- a/src/templates/ticket_sidebar.html
+++ b/src/templates/ticket_sidebar.html
@@ -7,10 +7,10 @@
 
   <body>
     <section data-main>
-      <img class="loader" src="dot.gif"/>
+      <img class="loader" src="spinner.gif"/>
     </section>
 
     <script type="text/javascript" src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"></script>
     <script type="text/javascript" src="ticket_sidebar.js"></script>
-</body>
+  </body>
 </html>
