New new status colour

--- a/src/main.scss
+++ b/src/main.scss
@@ -80,8 +80,8 @@ i.icon_circle_arrow_left {
   border-radius: 3px;
 
   &.new {
-    background: #ED961C; /* Yellow-600 */
-    color: #FFFFFF;
+    background: #FFB648; /* Yellow-400 */
+    color: #703B15; /* Yellow-800 */
   }
   &.open {
     background: #E82A2A; /* Crimson-400 */
