--- a/src/main.scss
+++ b/src/main.scss
@@ -163,8 +163,8 @@ i.icon_circle_arrow_left {
 
     &.org {
       border-top: 1px solid #E9EBED;
-      padding-top: 15px;
-      margin-top: 15px;
+      padding-top: 10px;
+      margin-top: 10px;
     }
 
     .cog {
@@ -213,27 +213,30 @@ i.icon_circle_arrow_left {
     }
 
     .avatar {
-      width: 50px;
-      height: 50px;
+      width: 24px;
+      height: 24px;
       float: left;
 
       &.default {
-        background-image: url("images/avatar.png");
-        background-size: cover;
-        border-radius: 50px;
 
-        &.org {
-          background-image: url("images/org.png");
+        svg {
+          width: 24px;
+          height: 24px;
+          margin-top: 3px;
+        }
+
+      &.org svg {
+        margin-top: 0px;
         }
       }
 
       img {
-        border-radius: 50px;
+        border-radius: 24px;
       }
     }
 
     .contacts {
-      margin-left: 65px;
+      margin-left: 34px;
 
       div {
         color: #68737D;
@@ -241,7 +244,7 @@ i.icon_circle_arrow_left {
         word-wrap: break-word;
 
         &.name {
-          font-size: 16px;
+          font-size: 14px;
           font-weight: 600;
 
           a {
