Relocate tooltip & Use translated strings

--- a/src/main.scss
+++ b/src/main.scss
@@ -210,7 +210,8 @@ html, body {
     .email-tooltip {
       visibility: hidden;
       position: absolute;
-      right: 0px;
+      left: 33px;
+      top: 0px;
     }
 
     .social {
